syntax = "proto3";

package mall;

import "google/api/annotations.proto";

option go_package = "mall-go/api/mall";

service User{
    rpc CreateToken(CreateTokenRequest) returns (CreateTokenReply) {
        option (google.api.http) = {
          post : "/token"
          body : "*"
        };
      }
}
message CreateTokenRequest{
  
}
message CreateTokenReply{
  
}